# distributed-web-crawler

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
consumers/: .env.example  .gitignore  Cargo.toml
consumers/src/: clients.rs  main.rs
consumers/src/clients/: rabbit_client.rs
crawler/: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
crawler/seeds/: e-commerce.txt  general.txt  research.text  technology.txt
crawler/src/: agents.rs  clients.rs  controllers.rs  crawler.rs  main.rs  messages.rs  parsers.rs  registry.rs  repositories.rs  requests.rs  services.rs  validators.rs
crawler/src/agents/: crawler_agent.rs  crawler_writer.rs
crawler/src/clients/: http.rs  http_client.rs  kafka_client.rs  rabbit_client.rs  redis_client.rs  robots_client.rs
crawler/src/controllers/: urlcontroller.rs
crawler/src/parsers/: factory.rs  http_parser.rs
crawler/src/repositories/: seedrepository.rs  urlrepository.rs
crawler/src/requests/: http.rs  http_request.rs  request.rs
crawler/src/services/: urlservice.rs
drivers/: Cargo.toml  docker-compose.yml
drivers/src/: errors.rs  lib.rs  rabbit.rs  redis.rs
models/: Cargo.toml
models/src/: lib.rs  pagedata.rs
