[package]
name = "consumers"
version = "0.1.0"
edition = "2024"

[dependencies]
drivers = { path = "../drivers" }
dotenv = "0.15.0"
lapin = "3.0.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "2.5.0" }
log = "0.4.25"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
futures-lite = "2.6.0"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["json"] }
