[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
once_cell = "1.20.3"
rand = "0.9.0"
redis = "0.28.2"
reqwest = "0.12.12"
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "2.5.0" }
url = "2.5.4"
regex = "1"
rust-stemmers = "1"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
