[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
drivers = { path = "../drivers" }
models = { path = "../models" }
dotenv = "0.15.0"
once_cell = "1.20.3"
rand = "0.9.0"
redis = "0.32.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "2.5.0" }
url = { version = "2.5.4", features = ["serde"] }
regex = "1"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
lapin = "3.0.0"
env_logger = "0.11.6"
log = "0.4.25"
futures-lite = "2.6.0"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["json"] }
reqwest = "0.12.23"
async-trait = "0.1.89"
scraper = "0.24.0"
