[package]
name = "drivers"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
redis = "0.32.5"
env_logger = "0.11.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["json"] }
futures-lite = "2.6.1"
lapin = "3.2.0"
url = "2.5.4"
serde = "1.0.219"
serde_json = "1.0.142"
